--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ quarkus.log.min-level=TRACE
 quarkus.log.category."fr.njj.galaxion".level=TRACE
 
 #%dev.quarkus.rest-client.logging.scope=request-response
-#%dev.quarkus.rest-client.logging.body-limit=1024
-%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
+%dev.quarkus.rest-client.logging.body-limit=1024
+#%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 #%dev.quarkus.log.category."org.keycloak".level=TRACE
 
 #%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
@@ -32,9 +32,8 @@ quarkus.liquibase.migrate-at-start=true
 ### Gitlab ###
 quarkus.rest-client.gitlab.url=https://gitlab.steelhome.internal/api/v4
 
-gitlab.test.job.canceled-older-than-minutes=5
-gitlab.suite.job.canceled-older-than-minutes=15
-gitlab.scheduler.job.canceled-older-than-minutes=30
+gitlab.old-pipeline-to-verify-in-minutes=5
+gitlab.old-pipeline-to-cancel-in-minutes=30
 gitlab.job.max-in-parallel=5
 
 ### OpenTelemetry ###
