--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ quarkus.http.port=60000
 
 ### Logs ###
 quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p (%X{traceId}) [%c{2.}] (%t) %s%e%n
+%dev.quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.json=false
 quarkus.log.min-level=TRACE
 quarkus.log.category."fr.njj.galaxion".level=TRACE
