--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,4 +60,4 @@ quarkus.swagger-ui.oauth-client-secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
 #%dev.quarkus.swagger-ui.oauth-client-secret=GbzqyshQ0c8K6gbKB7wEgs5FPBcYcplA
 
 ### TS to JS Converter ###
-quarkus.rest-client.tsToJsConverter.url=http://localhost:3000
+quarkus.rest-client.converter.url=http://localhost:3000
