--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ quarkus.log.category."fr.njj.galaxion".level=TRACE
 #%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 #%dev.quarkus.log.category."org.keycloak".level=TRACE
 
-#%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
-#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
-#%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
+%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
+%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
+%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
 
 ### Database ###
 quarkus.datasource.db-kind=postgresql
