--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ quarkus.log.category."fr.njj.galaxion".level=TRACE
 #%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 #%dev.quarkus.log.category."org.keycloak".level=TRACE
 
-%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
-%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
-%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
+#%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
+#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
+#%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
 
 ### Database ###
 quarkus.datasource.db-kind=postgresql
@@ -47,9 +47,9 @@ quarkus.jackson.serialization-inclusion=non_null
 quarkus.oidc.auth-server-url=https://keycloak.dev.epicmt.internal/auth/realms/galaxion
 quarkus.oidc.client-id=e2e-testing-manager-api
 quarkus.oidc.credentials.secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
-#%dev.quarkus.oidc.auth-server-url=http://localhost:5555/realms/master
-#%dev.quarkus.oidc.client-id=cypress-api
-#%dev.quarkus.oidc.credentials.secret=GbzqyshQ0c8K6gbKB7wEgs5FPBcYcplA
+#quarkus.oidc.auth-server-url=https://iam.itsffr.internal/realms/ITSF-PRIVATE
+#quarkus.oidc.client-id=e2e-testing-manager-api
+#quarkus.oidc.credentials.secret=sZWOKOdr07s5J93bsT3fDNZIQKK9Sfoh
 
 ### Swagger UI ###
 quarkus.swagger-ui.always-include=true
