--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,9 +47,9 @@ quarkus.jackson.serialization-inclusion=non_null
 quarkus.oidc.auth-server-url=https://keycloak.dev.epicmt.internal/auth/realms/galaxion
 quarkus.oidc.client-id=e2e-testing-manager-api
 quarkus.oidc.credentials.secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
-#quarkus.oidc.auth-server-url=https://iam.itsffr.internal/realms/ITSF-PRIVATE
-#quarkus.oidc.client-id=e2e-testing-manager-api
-#quarkus.oidc.credentials.secret=sZWOKOdr07s5J93bsT3fDNZIQKK9Sfoh
+#%dev.quarkus.oidc.auth-server-url=http://localhost:5555/realms/master
+#%dev.quarkus.oidc.client-id=cypress-api
+#%dev.quarkus.oidc.credentials.secret=GbzqyshQ0c8K6gbKB7wEgs5FPBcYcplA
 
 ### Swagger UI ###
 quarkus.swagger-ui.always-include=true
