--- a/deploy/api/api-deployment.yaml
+++ b/deploy/api/api-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: nexus-docker-registry-credentials
       containers:
         - name: e2e-testing-manager-api
-          image: nexus.itsf.io:5005/galaxion/e2e-testing-manager:0.6.0
+          image: nexus.itsf.io:5005/itsffr/tools/e2e-testing-manager-api:0.7.0
           imagePullPolicy: Always
           livenessProbe:
             httpGet:
@@ -52,3 +52,11 @@ spec:
                 secretKeyRef:
                   name: e2e-testing-manager-postgres-credentials
                   key: password
+            - name: QUARKUS_OIDC_AUTH_SERVER_URL
+              value: https://iam.itsffr.internal/realms/ITSF-PRIVATE
+            - name: QUARKUS_OIDC_CLIENT_ID
+              value: e2e-testing-manager-api
+            - name: QUARKUS_OIDC_CREDENTIALS_SECRET
+              value: sZWOKOdr07s5J93bsT3fDNZIQKK9Sfoh
+            - name: QUARKUS_REST_CLIENT_CONVERTER_URL
+              value: http://e2e-testing-manager-converter-api:8080
