--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>fr.njj.galaxion</groupId>
     <artifactId>e2e-testing-manager-api</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>${project.artifactId}</name>
 
     <properties>
