--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.application.name=e2e-testing-manager-api
 quarkus.http.port=60000
 
 ### Dev mode ###
@@ -10,7 +11,6 @@ quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p (%X{traceId}) [%c{2.}] (%t) %s%
 quarkus.log.console.json=false
 quarkus.log.min-level=TRACE
 quarkus.log.category."fr.njj.galaxion".level=TRACE
-quarkus.opentelemetry.enabled=false
 
 #%dev.quarkus.rest-client.logging.scope=request-response
 %dev.quarkus.rest-client.logging.body-limit=1024
@@ -38,9 +38,9 @@ gitlab.old-pipeline-to-verify-in-minutes=5
 gitlab.old-pipeline-to-cancel-in-minutes=59
 gitlab.job.max-in-parallel=10
 
-### OpenTelemetry ###
-quarkus.otel.exporter.otlp.enabled=false
-quarkus.otel.propagators=b3
+### Tracing ###
+quarkus.otel.traces.exporter=none
+
 
 quarkus.jackson.serialization-inclusion=non_null
 
@@ -62,3 +62,7 @@ quarkus.swagger-ui.oauth-client-secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
 
 ### TS to JS Converter ###
 quarkus.rest-client.converter.url=http://localhost:3000
+
+### Shutdown ###
+quarkus.shutdown.timeout=15
+quarkus.thread-pool.shutdown-timeout=10
