--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ quarkus.http.port=60000
 %dev.quarkus.live-reload.instrumentation=true
 
 ### Logs ###
-quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p (%X{traceId}) [%c{2.}] (%t) %s%e%n
-#%dev.quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p [%c{2.}] (%t) %s%e%n
+#quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p (%X{traceId}) [%c{2.}] (%t) %s%e%n
+quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.json=false
 quarkus.log.min-level=TRACE
 quarkus.log.category."fr.njj.galaxion".level=TRACE
@@ -39,7 +39,7 @@ gitlab.old-pipeline-to-cancel-in-minutes=30
 gitlab.job.max-in-parallel=10
 
 ### Tracing ###
-quarkus.otel.traces.exporter=none
+#quarkus.otel.traces.exporter=none Lib disable
 
 
 quarkus.jackson.serialization-inclusion=non_null
