--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,12 +36,12 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/cypress-manager
 quarkus.liquibase.change-log=db/changelog/db.changelog-master.yaml
 quarkus.liquibase.migrate-at-start=true
 
-### Gitlab ###
+### Git ###
 quarkus.rest-client.gitlab.url=https://gitlab.steelhome.internal/api/v4
 
-gitlab.old-pipeline-to-verify-in-minutes=5
-gitlab.old-pipeline-to-cancel-in-minutes=60
-max.worker-unit.in.parallel=10
+business.scheduler.worker.report.verification.interval-minutes=5
+business.scheduler.worker.report.cancel-timeout.interval-minutes=60
+business.worker.max-unit-in-parallel=10
 
 ### Tracing ###
 #quarkus.otel.traces.exporter=none Lib disable
