--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ quarkus.liquibase.migrate-at-start=true
 ### Git ###
 quarkus.rest-client.gitlab.url=https://gitlab.steelhome.internal/api/v4
 
-business.scheduler.worker.report.verification.interval-minutes=5
+business.scheduler.worker.report.verification.cron-expr=0 0/1 * * * ?
 business.scheduler.worker.report.cancel-timeout.interval-minutes=60
 business.worker.max-unit-in-parallel=10
 
