--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,21 +6,20 @@ quarkus.http.port=60000
 %dev.quarkus.live-reload.instrumentation=true
 
 ### Logs ###
-#quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p (%X{traceId}) [%c{2.}] (%t) %s%e%n
 quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.json=false
 quarkus.log.min-level=TRACE
 quarkus.log.category."fr.plum.e2e.manager".level=TRACE
 
 
-%dev.quarkus.http-client.logging.scope=request-response
-%dev.quarkus.rest-client.logging.body-limit=1024
-%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=TRACE
+#quarkus.http-client.logging.scope=request-response
+#quarkus.rest-client.logging.body-limit=1024
+#quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 #%dev.quarkus.log.category."org.keycloak".level=TRACE
 
-%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
-%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
-%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
+#%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
+#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
+#%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
 
 #%dev.quarkus.log.category."org.hibernate".level=DEBUG
 #%dev.quarkus.log.category."jakarta.transaction".level=DEBUG
@@ -39,13 +38,12 @@ quarkus.liquibase.migrate-at-start=true
 ### Git ###
 quarkus.rest-client.gitlab.url=https://gitlab.steelhome.internal/api/v4
 
-business.scheduler.worker.report.verification.cron-expr=0 0/1 * * * ?
+business.scheduler.worker.report.verification.cron-expr=0 0/5 * * * ?
 business.scheduler.worker.report.cancel-timeout.interval-minutes=60
 business.worker.max-unit-in-parallel=10
 
 ### Tracing ###
 #quarkus.otel.traces.exporter=none Lib disable
-
 
 quarkus.jackson.serialization-inclusion=non_null
 
