--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ quarkus.log.category."fr.plum.e2e.manager".level=TRACE
 #quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 #%dev.quarkus.log.category."org.keycloak".level=TRACE
 
-%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
-%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
-%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
+#%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
+#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
+#%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
 
 #%dev.quarkus.log.category."org.hibernate".level=DEBUG
 #%dev.quarkus.log.category."jakarta.transaction".level=DEBUG
@@ -69,6 +69,9 @@ quarkus.rest-client.converter.url=http://localhost:3000
 ### Shutdown ###
 quarkus.shutdown.timeout=15
 quarkus.thread-pool.shutdown-timeout=10
+
+### Scheduler ###
+%dev.scheduler.enabled=false
 
 ### Cache ###
 quarkus.cache.caffeine.gitlab-job.expire-after-write=3H
