--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,10 @@ quarkus.http.port=60000
 ### Logs ###
 quarkus.log.console.format=%d{HH:mm:ss:SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.json=false
-quarkus.log.min-level=TRACE
-quarkus.log.category."fr.plum.e2e.manager".level=TRACE
-
+quarkus.log.min-level=INFO
+quarkus.log.category."fr.plum.e2e.manager".level=INFO
+%dev.quarkus.log.min-level=TRACE
+%dev.quarkus.log.category."fr.plum.e2e.manager".level=TRACE
 
 #quarkus.http-client.logging.scope=request-response
 #quarkus.rest-client.logging.body-limit=1024
@@ -38,13 +39,12 @@ quarkus.liquibase.migrate-at-start=true
 ### Git ###
 quarkus.rest-client.gitlab.url=https://gitlab.steelhome.internal/api/v4
 
+### Business ###
 business.scheduler.worker.report.verification.cron-expr=0 0/5 * * * ?
 business.scheduler.worker.report.cancel-timeout.interval-minutes=60
 business.worker.max-unit-in-parallel=10
 
-### Tracing ###
-#quarkus.otel.traces.exporter=none Lib disable
-
+### Jackson ###
 quarkus.jackson.serialization-inclusion=non_null
 
 ### Keycloak ###
@@ -66,12 +66,8 @@ quarkus.swagger-ui.oauth-client-secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
 ### TS to JS Converter ###
 quarkus.rest-client.converter.url=http://localhost:3000
 
-### Shutdown ###
-quarkus.shutdown.timeout=15
-quarkus.thread-pool.shutdown-timeout=10
-
 ### Scheduler ###
-%dev.scheduler.enabled=false
+#dev.scheduler.enabled=false
 
 ### Cache ###
 quarkus.cache.caffeine.gitlab-job.expire-after-write=3H
