--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,11 +1,11 @@
-name: E2E Test Manager CI/CD
+name: E2E Test Manager API
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
     tags: [ "*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 jobs:
   build:
