--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,12 @@
-name: E2E Test Manager API
+name: E2E Test Manager API - Release
 
 on:
   push:
-    branches: [ "develop" ]
     tags: [ "*" ]
-  pull_request:
-    branches: [ "develop" ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
 
@@ -21,26 +17,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: Run Tests
-        run: mvn test
-
-  publish:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
+      - name: Package with Maven
+        run: mvn package
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
