--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
           mvn package -Dquarkus.container-image.build=true \
             -Dquarkus.container-image.push=true \
             -Dquarkus.container-image.registry=docker.io \
+            -Dquarkus.container-image.group=maxpnr \
+            -Dquarkus.container-image.name=e2e-test-manager-api \
             -Dquarkus.container-image.username=${{ secrets.DOCKERHUB_USERNAME }} \
             -Dquarkus.container-image.password=${{ secrets.DOCKERHUB_TOKEN }} \
             -Dquarkus.container-image.tag=${GITHUB_REF#refs/tags/}
