--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,21 +13,22 @@ quarkus.log.category."fr.plum.e2e.manager".level=INFO
 %dev.quarkus.log.min-level=TRACE
 %dev.quarkus.log.category."fr.plum.e2e.manager".level=TRACE
 
-%dev.quarkus.http-client.logging.scope=request-response
-%dev.quarkus.rest-client.logging.body-limit=1024
-%dev.quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
-#%dev.quarkus.log.category."org.keycloak".level=TRACE
+quarkus.rest-client.logging.scope=request-response
+quarkus.rest-client.logging.body-limit=1024
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 
 #%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
 #%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
 #%dev.quarkus.log.category."org.hibernate.orm.transaction".level=DEBUG
 
+#%dev.quarkus.log.category."org.keycloak".level=TRACE
 #%dev.quarkus.log.category."org.hibernate".level=DEBUG
 #%dev.quarkus.log.category."jakarta.transaction".level=DEBUG
 #%dev.quarkus.log.category."com.arjuna".level=DEBUG
 
 ### Database ###
 quarkus.datasource.db-kind=postgresql
+
 quarkus.datasource.username=mprunier
 quarkus.datasource.password=azerty
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/cypress-manager
