Add tests + review audit on file config  and metrics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ quarkus.log.category."fr.plum.e2e.manager".level=INFO
 %dev.quarkus.log.min-level=TRACE
 %dev.quarkus.log.category."fr.plum.e2e.manager".level=TRACE
 
-quarkus.rest-client.logging.scope=request-response
-quarkus.rest-client.logging.body-limit=1024
-quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
+#quarkus.rest-client.logging.scope=request-response
+#quarkus.rest-client.logging.body-limit=1024
+#quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 
 #%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
 #%dev.quarkus.log.category."org.hibernate.type.descriptor.sql".level=TRACE
