--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,20 +49,14 @@ business.worker.max-unit-in-parallel=10
 quarkus.jackson.serialization-inclusion=non_null
 
 ### Keycloak ###
-quarkus.oidc.auth-server-url=https://keycloak.dev.epicmt.internal/auth/realms/galaxion
+quarkus.oidc.auth-server-url=http://localhost:5555/realms/master
 quarkus.oidc.client-id=e2e-testing-manager-api
-quarkus.oidc.credentials.secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
-#%dev.quarkus.oidc.auth-server-url=http://localhost:5555/realms/master
-#%dev.quarkus.oidc.client-id=cypress-api
-#%dev.quarkus.oidc.credentials.secret=GbzqyshQ0c8K6gbKB7wEgs5FPBcYcplA
+quarkus.oidc.credentials.secret=E9SgMpWOvq0iS9gT5ZNnBIA82kgIgLQM
 
 ### Swagger UI ###
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.oauth-client-id=e2e-testing-manager-api
-quarkus.swagger-ui.oauth-client-secret=40c045c2-08e6-4aa5-bae9-43ffa4c03fd8
-
-#%dev.quarkus.swagger-ui.oauth-client-id=cypress-api
-#%dev.quarkus.swagger-ui.oauth-client-secret=GbzqyshQ0c8K6gbKB7wEgs5FPBcYcplA
+quarkus.swagger-ui.oauth-client-secret=E9SgMpWOvq0iS9gT5ZNnBIA82kgIgLQM
 
 ### TS to JS Converter ###
 quarkus.rest-client.converter.url=http://localhost:3000
